--- a/sys/sty.css
+++ b/sys/sty.css
@@ -3,7 +3,7 @@ background-image: url('/sys/bg.gif');
 background-repeat: repeat;
 margin: 0;
 padding: 0;
-font-family: Arial, sans-serif;
+font-family: georgia;
 }
 .container {
 width: 1100px;
