--- a/sys/style.css
+++ b/sys/style.css
@@ -7,7 +7,9 @@ font-family: georgia;
 }
 .container {
 width: 1100px;
+display: block;
 margin: 0 auto;
+background-color: #fff;
 }
 .header {
 width: 1100px;
